# geng

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily.yml  probe-api.yml
daily/: 2026-07-05.md  2026-07-06.md  2026-07-07.md  2026-07-08.md  2026-07-09.md  2026-07-10.md  2026-07-11.md  2026-07-12.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-21.md  2026-07-22.md  2026-07-23.md
data/: memes.db
data/baseline/: common_words.txt
data/exclude/: places.txt  shows.txt  stars.txt
docs/specs/: 2026-07-05-comment-mining-design.md  2026-07-05-daily-meme-tracker-design.md
docs/superpowers/plans/: 2026-07-05-daily-meme-tracker.md
src/geng/: __main__.py  classify.py  config.py  discover.py  explain.py  extract.py  filter.py  llm.py  models.py  pipeline.py  report.py  store.py  verify.py
tests/: test_classify.py  test_discover.py  test_explain.py  test_extract.py  test_filter.py  test_models.py  test_pipeline.py  test_report.py  test_store.py  test_verify.py
tests/fixtures/: weibo_sample.json
